<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_simulator</name>
  <version>0.2.0</version>
  <description>UVA F1/10 Autonomous Racecar Simulator. ROS2 Versio</description>
  <maintainer email="varundev@virginia.edu">Varundev Suresh Babu</maintainer>
  <maintainer email="ttw2xk@virginia.edu">Trent Weis</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
